// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer shoul match snapshot 1`] = `
<footer>
  <p
    aria-label="current year"
  >
    2023
  </p>
</footer>
`;

exports[`Footer should render Footer 1`] = `
<div>
  <footer>
    <p
      aria-label="current year"
    >
      2023
    </p>
  </footer>
</div>
`;
